# aqi-prediction

./: .env.example  .gitignore  README.md  feature_pipeline.py  inference_pipeline.py  notebook.ipynb  pyproject.toml  training_pipeline.py
infra/: feature_store.py  model_registry.py  prediction_store.py
tests/: test_feature_pipeline.py  test_inference_pipeline.py  test_training_pipeline.py
tests/infra/: test_feature_store.py  test_model_registry.py  test_prediction_store.py
